assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Libre+Caslon+Text&display=swap');


html, body {
  padding: 0;
  margin: 0;
  min-height: 100vh;
  width: 100%;
}

body {
  background-color: white;
  color: #4d4c4c;
  position: relative;
  overflow-x: hidden;
  font-family:'Libre Caslon Text', serif;

}

.container-fluid {
  padding: 0 !important;
  margin: 0 !important;
}

.top-container {
  display: flex;
  justify-content: space-around;
}

.title-text {
height: 300px;
width: 500px;
margin-top: 5%;
/* margin-right: 35%; */
}

.logo {
height: 250px;
width: 200px;
/* margin-left: 10%; */
margin-top: 10%;
margin-left: -10%;
}

.col-8 {
  display: flex;
  justify-content: center;
}

.col-4 {
  display: flex;
  justify-content: flex-start;
}

.nav-bar a:link {
  color: #244b2c;
  text-decoration: none;
}

.nav-bar a:visited {
  text-decoration: none;
  color: #244b2c;
}

.active {
  text-decoration: underline !important;
}

p {
padding: 0 20px 0 20px;
font-size: 13px;
}

.row {
  display: flex;
}

/* Image of bookshelf */
.bookshop-opening-img {
  height: 395px;
  width: 400px;
  margin-top: 3%;
  
}

/* div container for bookshelf image */


/* Opening hours text */
.opening-hours-text {
  margin-top: 3%;
  font-size: 13px;
  text-align: center;
  
}

/* MAKE IMAGES CIRCULAR ?*/

/* Border surrounding the opening hours text */
.opening-hours-border {
  border: 3px solid #192413;
  height: 394px;
  width: 400px;
  background-color: #B8C6AF;
  background-color: rgba(184,198,175, .8);
}


.map {
border: 3px solid #192413;
height: 405px;
width: 405px;
margin-bottom: 3%;
}


.holding-books {
  height: 400px;
  width: 400px;
  margin-bottom: 3%;
}
/*
.col-5 {
  display: flex;
  justify-content: space-between;
}
*/

h1 {
  font-family: 'Libre Baskerville', serif;
}

h2 {
  margin-bottom: 30px;
  margin-top: 20px;
  font-size: 18px;
  text-align: center;
  font-family: 'Libre Baskerville', serif;
  font-size: 22px;
}

h3 {
  font-family: 'Libre Baskerville', serif;
  font-size: 18px;
}

footer {
  text-align: center;
  height: 150px;
  display: block;
  position: fixed;
  margin-top: auto;
}

.horizontal-rule {
  display: flex;
  width: 100%;
  justify-content: center;
  margin-top: 3%;
}

.hr-line {
  width: 50%;
  position: absolute;
  margin: 22px auto;
  border-bottom: 1px solid #4d4c4c;
}

.book {
  top: 3px;
  color: #4d4c4c;
  height: 40px;
  width: 40px;
  background-color: transparent; /* instead of white as there was overlap on smaller screens */
  position: relative;
}


.nav-bar {
  font-size: 100%;
  letter-spacing: 3px;
  display: inline-block;
  margin: auto;
  overflow: hidden;
  text-align: center;
  width: 100%;
  padding-bottom: 25px;
  font-family: 'Libre Baskerville', serif;
  /*   position: relative;
*/
}

.nav-bar li {
  margin-right: 30px;
  text-decoration: none;
  color: #4d4c4c;
  list-style-type: none;
  display: inline-block;
  font-size: 25px;
}

.nav-bar li a:hover {
  text-decoration: underline;
}  

.image1-container {
  height: 500px;
  width: 100%;
  overflow: hidden;
  position: relative;
  background: url("https://images.unsplash.com/photo-1533327325824-76bc4e62d560?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1469&q=80") no-repeat center center;
  /* Below code provided by CI Bootstrap Whiskey Drop */
  -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;

    /* below code provided by CI Love Running Project */
  animation-name: image1-zoom;
  animation-duration: 5s;
  animation-fill-mode: forwards;
  
}

@keyframes image1-zoom {
  from {
    transform: scale(1);
  }

  to {
    transform: scale(1.1);
  }
}

.bottom-container {
  padding: 30px 0 30px;
  display: block;
  background-color: #192413;
  color: white;

}

/* Our Collections Page */
/* Divs with book info gets darker shades of green as they go down*/

.collections-main-img-container {
  height: 500px;
  width: 100%;
  overflow: hidden;
  position: relative;
  background: url(../images/collections-img-tiny.jpg) no-repeat center center;
  background-size: cover;
  /* "https://images.unsplash.com/photo-1580031553994-e504832075ab?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" */
}

.collections {
  min-height: 240vh;
  margin-top: 3%;
}

.collections img {
  height: 500px;
  width: 356px;
}

.collection1 img {
  float: right;
  margin-right: 200px;
}

.collection1-text {
  text-align: center;
  border: 3px solid #192413;
  height: 494px;
  width: 350px;
  float: left;
  margin-left: 200px;
  background-color: #B8C6AF;
}

.collection2 img {
  float: left;
  margin-left: 200px;
  margin-top: 3%;
}

.collection2-text {
  text-align: center;
  border: 3px solid #192413;
  height: 494px;
  width: 350px;
  float: right;
  margin-right: 200px;
  background-color: #8E9C86;
  margin-top: 3%;
}
/* use different background colours? */
.collection3 img {
  float: right;
  margin-right: 200px;
  margin-top: 3%;
}

.collection3-text {
  text-align: center;
  border: 3px solid #192413;
  height: 494px;
  width: 350px;
  float: left;
  margin-left: 200px;
  background-color: #66735F;
  margin-top: 3%;
}

/* Media Querries */

@media screen and (max-width: 768px) {
  .image1-container img {
    max-height: 150px;
    height: 150px;
    width: 100%;
  }

  .title-text {
    height: 185px;
    width: 275px;
    margin-top: 40px;
  }

  .logo {
    height: 125px;
width: 100px;
margin-top: 25%;
  }

  .nav-bar a {
    font-size: 0.75 rem !important;
  }
}

@media screen and (max-width: 480px) {
  .logo {
    height: 100px;
    width: 75px;
  }

}

/* Form Section */

#form-section {
 /* background: url("https://images.unsplash.com/photo-1583526241256-cb18e8635e5b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80") no-repeat center center; */
 background: url(../images/contact-us.jpg);
  background-size: cover;
  background-position: center;
  height: 900px;
  display: flex;
  justify-content: center;
  align-items: center;
  align-content: center;

}

#form-section h2 {
  font-size: 20px;
  font-family: 'Libre Baskerville', serif;
  margin-top: 40px;

}

.contact-form {
  margin-top: 180px;
  color: #fff;
  background-color: rgba(113, 130, 103, 0.7);
  width: 650px;
  height: 650px;
  position: absolute;
  left: 28%;
  padding-bottom: 20px;
  padding: 30px;
  border-radius: 50%;
  padding-top: 30px;
  text-align: center;
  font-family: 'Libre Caslon Text', serif;
  letter-spacing: 2px;
}

.submit-btn {
  margin-top: 25px;
  border-radius: 15%;
  padding: 10px 20px;
  font-size: 16px;
  background-color: #244b2c;
  color: white;
}

.contact-section { 
  height: 400px;
  width: 100%;
  overflow: hidden;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  align-content: center;
}

.ladder-img { 
background: url(../images/contact-info-img.jpg) no-repeat center center; 
height: 400px;
width: 100%;
background-size: cover;
position: absolute;
}

#contact-info h1 {
letter-spacing: 2px;
margin-bottom: 20px;
}

#contact-info h2 {
  margin-bottom: 10px;
}

#contact-info { 
  background-color: rgb(246, 237, 217, 0.7);
  height: 350px;
  width: 350px;
  position: absolute;
  padding-top: 30px;
  padding-bottom: 20px;
  text-align: center;
  color: black;
}

#contact-info p {
  font-size: 16px;
}

